Fixup spacing regressions

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -195,7 +195,7 @@ $secondary-action-horizontal-padding: 1.5 * spacing(tight);
   }
 
   .Ribbon {
-    padding-right: spacing(loose);
+    padding-right: spacing();
   }
 
   .Actions {
